Revert latest tag

--- a/dev/docker-compose.yaml
+++ b/dev/docker-compose.yaml
@@ -64,7 +64,7 @@ services:
       - COLLABORATOR_API_URL=https://collaborator-tasks.getepic.com
     restart: unless-stopped
   front:
-    image: hardcoreeng/front:latest
+    image: hardcoreeng/front
     links:
       - mongodb
       - minio
