--- a/dev/nginx/nginx.conf
+++ b/dev/nginx/nginx.conf
@@ -1,28 +1,24 @@
-user  nginx;
-worker_processes  auto;
-
-error_log  /var/log/nginx/error.log warn;
-pid        /var/run/nginx.pid;
+user www-data;
+worker_processes auto;
+pid /run/nginx.pid;
+error_log /var/log/nginx/error.log;
+include /etc/nginx/modules-enabled/*.conf;
 
 events {
-    worker_connections  1024;
+    worker_connections 768;
+    # multi_accept on;
 }
 
 http {
-    include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;
-
-    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-                      '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
-
-    access_log  /var/log/nginx/access.log  main;
-
-    sendfile        on;
-    tcp_nopush      on;
-    tcp_nodelay     on;
-    keepalive_timeout  65;
+    sendfile on;
+    tcp_nopush on;
     types_hash_max_size 2048;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+    ssl_prefer_server_ciphers on;
+    access_log /var/log/nginx/access.log;
+    gzip on;
 
     server {
         listen 80;
@@ -46,7 +42,7 @@ http {
         location / {
             proxy_pass http://localhost:3333;
             include proxy_params;
-            # WebSocket support
+               # WebSocket support
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
@@ -56,7 +52,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme; 
 
 
-    }
+       }
     }
 
     server {
@@ -107,5 +103,4 @@ http {
             include proxy_params;
         }
     }
-
 }
