--- a/dev/nginx/nginx.conf
+++ b/dev/nginx/nginx.conf
@@ -28,7 +28,10 @@ http {
             
         location / {
             proxy_pass http://localhost:4004;
-            include proxy_params;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
@@ -41,15 +44,10 @@ http {
 
         location / {
             proxy_pass http://localhost:3333;
-            include proxy_params;
-               # WebSocket support
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_set_header X-Forwarded-Proto $scheme;
 
 
        }
@@ -63,15 +61,10 @@ http {
 
         location / {
             proxy_pass http://localhost:3078;
-            include proxy_params;
-
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
-            proxy_set_header Host $host;
+            proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme; 
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
@@ -83,10 +76,11 @@ http {
         server_name account-tasks.getepic.com;
             
         location / {
-
-
             proxy_pass http://localhost:3000;
-            include proxy_params;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 
@@ -97,10 +91,11 @@ http {
         server_name tasks.getepic.com;
             
         location / {
-
-
             proxy_pass http://localhost:8087;
-            include proxy_params;
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
