--- a/dev/nginx/nginx.conf
+++ b/dev/nginx/nginx.conf
@@ -1,40 +1,43 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-error_log /var/log/nginx/error.log;
-include /etc/nginx/modules-enabled/*.conf;
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
 
 events {
-    worker_connections 768;
-    # multi_accept on;
+    worker_connections  1024;
 }
 
 http {
-    sendfile on;
-    tcp_nopush on;
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    tcp_nopush      on;
+    tcp_nodelay     on;
+    keepalive_timeout  65;
     types_hash_max_size 2048;
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
-    ssl_prefer_server_ciphers on;
-    access_log /var/log/nginx/access.log;
-    gzip on;
 
     server {
         listen 80;
         listen [::]:80;
 
         server_name rokoni-tasks.getepic.com;
-            
+
         location / {
-            proxy_pass http://localhost:4004;
+            proxy_pass http://rekoni:4004;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
-
 
     server {
         listen 80;
@@ -43,14 +46,17 @@ http {
         server_name transactor-tasks.getepic.com;
 
         location / {
-            proxy_pass http://localhost:3333;
+            proxy_pass http://transactor:3333;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-
-       }
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+        }
     }
 
     server {
@@ -60,23 +66,27 @@ http {
         server_name collaborator-tasks.getepic.com;
 
         location / {
-            proxy_pass http://localhost:3078;
+            proxy_pass http://collaborator:3078;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
         }
     }
-
 
     server {
         listen 80;
         listen [::]:80;
 
         server_name account-tasks.getepic.com;
-            
+
         location / {
-            proxy_pass http://localhost:3000;
+            proxy_pass http://account:3000;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -89,9 +99,9 @@ http {
         listen [::]:80;
 
         server_name tasks.getepic.com;
-            
+
         location / {
-            proxy_pass http://localhost:8087;
+            proxy_pass http://front:8087;
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
