--- a/dev/docker-compose.yaml
+++ b/dev/docker-compose.yaml
@@ -35,7 +35,7 @@ services:
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms1024m -Xmx1024m
       - http.cors.enabled=true
-      - http.cors.allow-origin=http://localhost:8082      
+      - http.cors.allow-origin=http://localhost:8082
     healthcheck:
       interval: 20s
       retries: 10
@@ -52,16 +52,19 @@ services:
       - SERVER_PORT=3000
       - SERVER_SECRET=secret
       - MONGO_URL=mongodb://mongodb:27017
-      - TRANSACTOR_URL=ws://transactor:3333
-      - ENDPOINT_URL=ws://localhost:3333
+      - TRANSACTOR_URL=wss://transactor-tasks.getepic.com
+      - ENDPOINT_URL=wss://transactor-tasks.getepic.com
+      - SERVER_PROVIDER=wss
       - STORAGE_CONFIG=${STORAGE_CONFIG}
-      - FRONT_URL=http://front:8080
+      - FRONT_URL=https://tasks.getepic.com
       - INIT_WORKSPACE=demo-tracker
       - MODEL_ENABLED=*
-      - ACCOUNTS_URL=http://localhost:3000
+      - ACCOUNTS_URL=https://account-tasks.getepic.com
+      - COLLABORATOR_URL=wss://collaborator-tasks.getepic.com
+      - COLLABORATOR_API_URL=https://collaborator-tasks.getepic.com
     restart: unless-stopped
   front:
-    image: hardcoreeng/front
+    image: hardcoreeng/front:latest
     links:
       - mongodb
       - minio
@@ -74,17 +77,32 @@ services:
       - SERVER_PORT=8080
       - SERVER_SECRET=secret
       - MONGO_URL=mongodb://mongodb:27017
-      - ACCOUNTS_URL=http://localhost:3000
-      - REKONI_URL=http://localhost:4004
+      - ACCOUNTS_URL=https://account-tasks.getepic.com
+      - REKONI_URL=https://rokoni-tasks.getepic.com
       - CALENDAR_URL=http://localhost:8095
       - GMAIL_URL=http://localhost:8088
       - TELEGRAM_URL=http://localhost:8086
-      - UPLOAD_URL=/files
+      - UPLOAD_URL=https://tasks.getepic.com/files
+      - TRANSACTOR_URL=wss://transactor-tasks.getepic.com
       - ELASTIC_URL=http://elastic:9200
-      - COLLABORATOR_URL=ws://localhost:3078
-      - COLLABORATOR_API_URL=http://localhost:3078
+      - COLLABORATOR_URL=wss://collaborator-tasks.getepic.com
+      - COLLABORATOR_API_URL=https://collaborator-tasks.getepic.com
       - STORAGE_CONFIG=${STORAGE_CONFIG}
-      - BRANDING_URL=http://localhost:8087/branding.json
+      - SERVER_PROVIDER=wss
+      - BRANDING_URL=https://tasks.getepic.com/branding.json
+    restart: unless-stopped
+  nginx:
+    image: nginx:latest
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - account
+      - collaborator
+      - transactor
+      - rekoni
+      - front
     restart: unless-stopped
   collaborator:
     image: hardcoreeng/collaborator
@@ -97,9 +115,11 @@ services:
     environment:
       - COLLABORATOR_PORT=3078
       - SECRET=secret
-      - ACCOUNTS_URL=http://account:3000
-      - TRANSACTOR_URL=ws://transactor:3333
-      - UPLOAD_URL=/files
+      - ACCOUNTS_URL=https://account-tasks.getepic.com
+      - TRANSACTOR_URL=wss://transactor-tasks.getepic.com
+      - UPLOAD_URL=https://tasks.getepic.com/files
+      - SERVER_PROVIDER=wss
+      - COLLABORATOR_URL=wss://collaborator-tasks.getepic.com
       - MONGO_URL=mongodb://mongodb:27017
       - STORAGE_CONFIG=${STORAGE_CONFIG}
     restart: unless-stopped
@@ -141,14 +161,15 @@ services:
       - METRICS_CONSOLE=false
       - METRICS_FILE=metrics.txt
       - STORAGE_CONFIG=${STORAGE_CONFIG}
-      - REKONI_URL=http://rekoni:4004
-      - FRONT_URL=http://localhost:8087
-      - UPLOAD_URL=http://localhost:8087/files
+      - REKONI_URL=https://rokoni-tasks.getepic.com
+      - FRONT_URL=https://tasks.getepic.com
+      - UPLOAD_URL=https://tasks.getepic.com/files
       # - APM_SERVER_URL=http://apm-server:8200
-      - SERVER_PROVIDER=ws
-      - ACCOUNTS_URL=http://account:3000
+      - SERVER_PROVIDER=wss
+      - ACCOUNTS_URL=https://account-tasks.getepic.com
       - LAST_NAME_FIRST=true
       - ELASTIC_INDEX_NAME=local_storage_index
+      - COLLABORATOR_URL=wss://collaborator-tasks.getepic.com
     restart: unless-stopped
   rekoni:
     image: hardcoreeng/rekoni-service
